everything but nav styled

--- a/MessageInABottle/MessageInABottle.csproj
+++ b/MessageInABottle/MessageInABottle.csproj
@@ -192,9 +192,12 @@
     <Content Include="Images\mobilebckgnd.png" />
     <Content Include="Images\bottlesbckgrnd.png" />
     <Content Include="Images\messagesbckgrnd.png" />
+    <Content Include="Images\parchment.png" />
     <Content Include="Images\waveicon.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="fonts\SumidaScriptDemoRegular-X3GEg.otf" />
+    <Content Include="fonts\Sumida.woff" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -242,8 +245,6 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Shared\_Message.cshtml" />
-    <Content Include="Views\Shared\_LayoutMessages.cshtml" />
-    <Content Include="Views\Shared\_LayoutBottles.cshtml" />
     <Content Include="Views\Shared\_LayoutHome.cshtml" />
   </ItemGroup>
   <ItemGroup>
