everything working, looking good. still need to do log in / contact page

--- a/MessageInABottle/MessageInABottle.csproj
+++ b/MessageInABottle/MessageInABottle.csproj
@@ -193,6 +193,7 @@
     <Content Include="Images\bottlesbckgrnd.png" />
     <Content Include="Images\messagesbckgrnd.png" />
     <Content Include="Images\parchment.png" />
+    <Content Include="Images\icon.png" />
     <Content Include="Images\waveicon.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
